<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/setting" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_label"
                android:textSize="32dp" android:textColor="@color/setting_text_color" />
        </LinearLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:src="@drawable/separator" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center"
            android:orientation="horizontal">
            <View android:layout_height="0dip" android:layout_width="10dip" />
            <LinearLayout android:layout_width="0dip" android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_weight="1">
                <CheckBox android:id="@+id/automaticBrightnessCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/setting_automatic_brightness" android:textSize="12dp" />
                <LinearLayout android:id="@+id/brightnessLayout" android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:gravity="center_vertical" android:padding="10dp">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_brightness"
                        android:textColor="@color/setting_text_color" />
                    <View android:layout_width="10dp" android:layout_height="0dp" />
                    <SeekBar android:id="@+id/brightnessSeekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
                <CheckBox android:id="@+id/canRotateCheckBox" android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/setting_layoutlock" android:textSize="12dp" />
            </LinearLayout>
            <View android:layout_height="0dip" android:layout_width="10dip" />
            <Button android:id="@+id/resetButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_reset"
                android:textSize="13sp" android:gravity="center" />
            <View android:layout_height="0dip" android:layout_width="10dip" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>